# Alice_yt-dlp

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  folders.rs  history.rs  lib.rs  main.rs  models.rs  settings.rs  ytdlp.rs
src/components/: DownloadControls.tsx  DownloadModeSelector.tsx  DownloadOptions.tsx  HistoryPanel.tsx  LibrarySidebar.tsx  LocalMediaBrowser.tsx  LogPanel.tsx  MediaList.tsx  OutputDirectoryPicker.tsx  ProgressPanel.tsx  UrlInput.tsx
src/lib/: format.ts  tauri.ts  types.ts
