[package]
name = "alice"
version = "0.1.0"
description = "Alice desktop media manager"
authors = ["Codex"]
edition = "2021"

[lib]
name = "alice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.5", features = [] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
